<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/emcntctrecyview"
    card_view:cardElevation="5dp"
    card_view:contentPadding="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardMaxElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <TextView
            android:id="@+id/FirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/emfirstname"
            android:textColor="#000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/ShowFirstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/showemfirstname"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/FirstName"
            android:layout_toEndOf="@+id/FirstName"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp" />

        <TextView
            android:id="@+id/LastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/emlastname"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_below="@+id/FirstName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/ShowLastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/showemlastname"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_below="@+id/ShowFirstNameTextView"
            android:layout_toRightOf="@+id/LastName"
            android:layout_toEndOf="@+id/LastName" />

        <TextView
            android:id="@+id/PrimaryContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/emprimcontact"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_below="@+id/LastName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/ShowPrimContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/showemprimcontact"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_below="@+id/ShowLastNameTextView"
            android:layout_toRightOf="@+id/PrimaryContact"
            android:layout_toEndOf="@+id/PrimaryContact" />

        <TextView
            android:id="@+id/OtherContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/emothercontact"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_below="@+id/PrimaryContact"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/ShowOtherContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/showemothercontact"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_below="@+id/ShowPrimContactTextView"
            android:layout_toRightOf="@+id/OtherContact"
            android:layout_toEndOf="@+id/OtherContact" />

        <TextView
            android:id="@+id/EmContactAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/emaddress"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_below="@+id/OtherContact"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/ShowEmAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/showemaddress"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_below="@+id/ShowOtherContactTextView"
            android:layout_toRightOf="@+id/EmContactAddress"
            android:layout_toEndOf="@+id/EmContactAddress" />

        <TextView
            android:id="@+id/EmContactRelationship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/emrelationship"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_below="@+id/EmContactAddress"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/ShowEmRelationshipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/showemrelationship"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_below="@+id/ShowEmAddressTextView"
            android:layout_toRightOf="@+id/EmContactRelationship"
            android:layout_toEndOf="@+id/EmContactRelationship" />
    </RelativeLayout>


</android.support.v7.widget.CardView>